fix swg
